RESOLVED FIXED 148978
[css-grid] Percentage columns shouldn't include border and padding
https://bugs.webkit.org/show_bug.cgi?id=148978
Summary [css-grid] Percentage columns shouldn't include border and padding
Manuel Rego Casasnovas
Reported 2015-09-08 14:18:41 PDT
If you've a column with 100%, the size of the column is calculated including the border and padding of the grid container. This is not right and leads to weird results. Example to reproduce the issue: <div style="display: -webkit-grid; border: 5px solid black; padding: 25px; -webkit-grid: 100% / 100%; width: 200px; height: 200px;"> <div style="background: lime;">item</div> </div> The height of the item is kept to 200px as it should, however the width goes to 260px (200 + 5 + 25 + 25 + 5) instead of 200px. This was already reported and fixed in Blink: https://code.google.com/p/chromium/issues/detail?id=529203
Attachments
Patch (7.76 KB, patch)
2015-09-08 14:21 PDT, Rego GTK+ EWS Bot
no flags
Patch (7.76 KB, patch)
2015-09-08 14:22 PDT, Manuel Rego Casasnovas
no flags
Patch for landing (7.84 KB, patch)
2015-09-09 03:05 PDT, Manuel Rego Casasnovas
no flags
Rebased patch for landing (7.79 KB, patch)
2015-09-09 13:10 PDT, Manuel Rego Casasnovas
no flags
Rego GTK+ EWS Bot
Comment 1 2015-09-08 14:21:02 PDT
Manuel Rego Casasnovas
Comment 2 2015-09-08 14:22:09 PDT
WebKit Commit Bot
Comment 3 2015-09-09 02:58:07 PDT
Comment on attachment 260793 [details] Patch Rejecting attachment 260793 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-03', 'apply-attachment', '--no-update', '--non-interactive', 260793, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: -- saving rejects to file Source/WebCore/rendering/RenderGrid.cpp.rej patching file LayoutTests/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file LayoutTests/fast/css-grid-layout/grid-percent-track-margin-border-padding-expected.txt patching file LayoutTests/fast/css-grid-layout/grid-percent-track-margin-border-padding.html Failed to run "[u'/Volumes/Data/EWS/WebKit/Tools/Scripts/svn-apply', '--force', '--reviewer', u'Sergio Villar Senin']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Full output: http://webkit-queues.webkit.org/results/154060
Manuel Rego Casasnovas
Comment 4 2015-09-09 03:05:42 PDT
Created attachment 260853 [details] Patch for landing
WebKit Commit Bot
Comment 5 2015-09-09 04:23:17 PDT
Comment on attachment 260853 [details] Patch for landing Clearing flags on attachment: 260853 Committed r189538: <http://trac.webkit.org/changeset/189538>
WebKit Commit Bot
Comment 6 2015-09-09 04:23:21 PDT
All reviewed patches have been landed. Closing bug.
WebKit Commit Bot
Comment 7 2015-09-09 08:39:55 PDT
Re-opened since this is blocked by bug 149002
Alex Christensen
Comment 8 2015-09-09 08:41:50 PDT
Sorry. r189536 wouldn't rollout without rolling this out, too, because this touched RenderGrid.cpp after that patch. This might be good.
Manuel Rego Casasnovas
Comment 9 2015-09-09 13:10:42 PDT
Created attachment 260869 [details] Rebased patch for landing
WebKit Commit Bot
Comment 10 2015-09-09 14:11:12 PDT
Comment on attachment 260869 [details] Rebased patch for landing Clearing flags on attachment: 260869 Committed r189550: <http://trac.webkit.org/changeset/189550>
WebKit Commit Bot
Comment 11 2015-09-09 14:11:18 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.