[css-grid] Percentage columns shouldn't include border and padding https://bugs.webkit.org/show_bug.cgi?id=148978

Reviewed by Sergio Villar Senin.

Source/WebCore:

Subtract border and padding when we're calculating the breadth of the
columns in LayoutGrid::computeUsedBreadthOfSpecifiedLength().

Added test to check the behavior for both columns and rows.

Test: fast/css-grid-layout/grid-percent-track-margin-border-padding.html

* rendering/RenderGrid.cpp:
(WebCore::RenderGrid::computeUsedBreadthOfSpecifiedLength):

LayoutTests:

* fast/css-grid-layout/grid-percent-track-margin-border-padding-expected.txt: Added.
* fast/css-grid-layout/grid-percent-track-margin-border-padding.html: Added.


Canonical link: https://commits.webkit.org/167091@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@189538 268f45cc-cd09-0410-ab3c-d52691b4dbfc